// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[`profile 1`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "deleted_at": null,
  "description_search": null,
  "email": "test@test.io",
  "email_text": null,
  "email_verified_at": null,
  "expiry_date": null,
  "first_name": "test_name",
  "followers": 0,
  "followings": 0,
  "id": Any<String>,
  "impact_score": 0,
  "language": null,
  "last_name": "last_name",
  "mission": null,
  "mobile_country_code": null,
  "my_conversation": null,
  "password_expired": false,
  "phone": null,
  "phone_verified_at": null,
  "remember_token": null,
  "search_tsv": Any<String>,
  "skills": null,
  "social_causes": null,
  "status": "INACTIVE",
  "updated_at": Any<String>,
  "username": "test_username",
  "view_as": null,
  "wallet_address": null,
}
`;

exports[`profile 2`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "deleted_at": null,
  "description_search": null,
  "email": "test2@test.io",
  "email_text": null,
  "email_verified_at": null,
  "expiry_date": null,
  "first_name": "test_name_2",
  "followers": 0,
  "followings": 0,
  "id": Any<String>,
  "impact_score": 0,
  "language": null,
  "last_name": "last_name_2",
  "mission": null,
  "mobile_country_code": null,
  "my_conversation": null,
  "password_expired": false,
  "phone": null,
  "phone_verified_at": null,
  "remember_token": null,
  "search_tsv": Any<String>,
  "skills": null,
  "social_causes": null,
  "status": "INACTIVE",
  "updated_at": Any<String>,
  "username": "test_username_2",
  "view_as": null,
  "wallet_address": null,
}
`;

exports[`register 1`] = `
{
  "error": ""email" must be a valid email",
}
`;
